frontend/tests/cases/negative/kindMismatchInInstanceHead.gr
interface Simple (a : Type -> Type)

data A = A

-- 'A' has the wrong kind
instance Simple A
